<resources>
    <string name="app_name">ADASHI</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="next">NEXT</string>
    <string name="todo1">TODO</string>
    <string name="enter_email_phone_number">Enter Email/Phone number</string>
    <string name="todo">TODO</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="username">Username</string>
    <string name="logo">LOGO</string>
</resources>